@@ -1,6 +1,11 @@
 2016-11-21  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	* misc/network.c (socket_negotiate_ssl, open_stream_connection_ext):
+	Add port value to SNI disabling kb entry.
+
+2016-11-21  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	* misc/network.c (socket_negotiate_ssl, open_stream_connection_ext):
 	Check Host/SNI/force_disable before setting the SNI.
 
 2016-11-21  Michael Wiegand <michael.wiegand@greenbone.net>
